--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,10 @@ org.gradle.parallel = true
 
 # Mod Properties
 version = 1.0.0
-maven_group = com.example
-archives_base_name = example_mod
+maven_group = com.cezij
+archives_base_name = lots
 
 # Dependencies are managed at gradle/libs.versions.toml
+
+# Quilted Fabric API
+quilted_fabric_api_version = 7.0.6+0.85.0
